--- a/parent/device-registry/src/main/resources/public/index.html
+++ b/parent/device-registry/src/main/resources/public/index.html
@@ -65,6 +65,9 @@
 		<script src="bower_components/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
 		<script src="bower_components/jquery-modal\0.9.1\jquery.modal.min.js"></script>
 		<script src="bower_components/admin-lte/js/adminlte.min.js"></script>
+		
 		<script src="index.js"></script>
+		<script src="pages/template/service.js"></script>
+		<script src="pages/metric/service.js"></script>
 	</body>
 </html>
