--- a/parent/device-registry/src/main/resources/public/index.html
+++ b/parent/device-registry/src/main/resources/public/index.html
@@ -92,7 +92,7 @@
 		});
 
 		$(function(){
-			$("#menu-dashboard").trigger("click");
+			$("#menu-templates").trigger("click");
 		});
 
 		</script>
