--- a/parent/device-registry/src/main/resources/public/index1.html
+++ b/parent/device-registry/src/main/resources/public/index1.html
@@ -61,12 +61,19 @@
 			 </aside>
 			<div class="content-wrapper"></div>
 		</div>
+		
 		<div id="modal-container"></div>
+		<div id="modal-container-1"></div>
+		<div id="modal-container-2"></div>
+		<div id="modal-container-3"></div>
+		<div id="modal-container-4"></div>
+		<div id="modal-container-5"></div>
+		
+		<script src="libs/jquery/dist/jquery.min.js"></script>
 		<script src="libs/jquery/dist/jquery.min.js"></script>
 		<script src="libs/jquery-tiny-pubsub/ba-tiny-pubsub.min.js"></script>
 		<script src="libs/loadTemplate/jquery.loadTemplate.js"></script>
 		<script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
-		<script src="libs/slim-scroll/jquery.slimscroll.min.js"></script>
 		<script src="libs/datatables.net/js/jquery.dataTables.min.js"></script>
 		<script src="libs/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
 		<script src="libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
