--- a/parent/device-registry/src/main/resources/public/pages/dashboard/dashboard.html
+++ b/parent/device-registry/src/main/resources/public/pages/dashboard/dashboard.html
@@ -1,2 +1,5 @@
 <strong>This is dashboard !!!</strong>
 <div data-content="message">Default content</div>
+<script>
+    $("#page-title").html("Dashboard");
+</script>
