--- a/parent/device-registry/src/main/resources/public/index.html
+++ b/parent/device-registry/src/main/resources/public/index.html
@@ -22,15 +22,13 @@
 			</ul>
 		</aside>
 		<main id="page-container"> 
-			<header id="page-header">
+			<header id="page-header" class="container-fluid">
 				<button id="sidnav-toggle">
 					<i class="fa fa-bars"></i>
 				</button>
-			</header>
-			<div class="container-fluid">
 				<h2 id="page-title" >				
 				</h2>
-			</div>
+			</header>
 			<div id="template-container" class="container-fluid"></div>
 		</main>
 	</div>
