--- a/parent/device-registry/src/main/resources/public/index.html
+++ b/parent/device-registry/src/main/resources/public/index.html
@@ -34,7 +34,8 @@
 	</div>
 	<div id="modal-container"></div>
 	<script src="libs/jquery/dist/jquery.min.js"></script>
-	<script src="libs\jquery\dist\jquery-migrate-1.0.0.min.js"></script>
+	<script src="libs/jquery/dist/jquery-migrate-1.0.0.min.js"></script>
+	<script src="libs/jquery-validate/jquery.validate.min.js"></script>
 	<script src="libs/jquery-tiny-pubsub/ba-tiny-pubsub.min.js"></script>
 	<script src="libs/loadTemplate/jquery.loadTemplate.js"></script>
 	<script src="libs/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -42,6 +43,7 @@
 	<script src="libs/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
 	<script src="libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
 	<script src="libs/jquery-hashchange/jquery.ba-hashchange.min.js"></script>
+	
 	<script src="plugins/jquery/jQuery-router.js"></script>
 	<script src="index.js"></script>
 	<script src="pages/utils/utils.js"></script>
