--- a/parent/device-registry/src/main/resources/public/pages/metrics/edit.html
+++ b/parent/device-registry/src/main/resources/public/pages/metrics/edit.html
@@ -6,19 +6,19 @@
 		<input type="text" style="display: none;" id="metricId" data-value="id">
 		<div class="form-group">
 			<label for="metricName">Name</label> 
-			<input type="text" data-value="name" class="form-control" id="metricName" placeholder="Metric Name">
+			<input type="text" data-value="name" class="form-control" id="metricName" maxlength="255" placeholder="Metric Name">
 		</div>
 		<div class="form-group">
 			<label for="metricDescription">Description</label> 
-			<input type="text" data-value="description" class="form-control" id="metricDescription" placeholder="Description for the Metric">
+			<input type="text" data-value="description" class="form-control" id="metricDescription" maxlength="255" placeholder="Description for the Metric">
 		</div>
 		<div class="form-group">
 			<label for="abbreviation">Abbreviation</label> 
-			<input type="text" data-value="abbreviation" class="form-control" id="abbreviation" placeholder="Abbreviation for the measurement Unit">
+			<input type="text" data-value="abbreviation" class="form-control" id="abbreviation" maxlength="10" placeholder="Abbreviation for the measurement Unit">
 		</div>
 		<div class="form-group">
 			<label for="metricUnit">Unit</label> 
-			<input type="text" data-value="unit" class="form-control" id="metricUnit" placeholder="Measurement unit for this metric">
+			<input type="text" data-value="unit" class="form-control" id="metricUnit" maxlength="255" placeholder="Measurement unit for this metric">
 		</div>
 		<div class="form-group">
 			<label for="dataType">Data Type</label> 
