--- a/parent/device-registry/src/main/resources/public/index.html
+++ b/parent/device-registry/src/main/resources/public/index.html
@@ -49,6 +49,8 @@
 	<script src="pages/utils/utils.js"></script>
 	<script src="pages/dashboard/service.js"></script>
 	<script src="pages/templates/service.js"></script>
+	<script src="pages/metrics/service.js"></script>
+	
 </body>
 
 </html>
