--- a/parent/device-registry/src/main/resources/public/index.html
+++ b/parent/device-registry/src/main/resources/public/index.html
@@ -4,7 +4,8 @@
 <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
 <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="libs/jquery-modal/0.9.1/jquery.modal.min.css">
-<link rel="stylesheet" href="libs\datatables.net-bs\css\dataTables.bootstrap.min.css">
+<link rel="stylesheet" href="libs/jquery-tagsinput/bootstrap-tagsinput.css">
+<link rel="stylesheet" href="libs/datatables.net-bs/css/dataTables.bootstrap.min.css">
 <link rel="stylesheet" href="index.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
@@ -42,6 +43,7 @@
 	<script src="libs/datatables.net/js/jquery.dataTables.min.js"></script>
 	<script src="libs/datatables.net-bs/js/dataTables.bootstrap.min.js"></script>
 	<script src="libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+	<script src="libs/jquery-tagsinput/bootstrap-tagsinput.min.js"></script>
 	<script src="libs/jquery-hashchange/jquery.ba-hashchange.min.js"></script>
 	
 	<script src="plugins/jquery/jQuery-router.js"></script>
