--- a/parent/device-registry/src/main/resources/public/pages/metrics/edit.html
+++ b/parent/device-registry/src/main/resources/public/pages/metrics/edit.html
@@ -18,7 +18,7 @@
 		</div>
 		<div class="form-group">
 			<label for="metricUnit">Unit</label> 
-			<input required minlength="3" maxlength="255" type="text" data-value="unit" class="form-control" id="metricUnit" placeholder="Measurement unit for this metric">
+			<input required maxlength="255" type="text" data-value="unit" class="form-control" id="metricUnit" placeholder="Measurement unit for this metric">
 		</div>
 		<div class="form-group">
 			<label for="dataType">Data Type</label> 
@@ -43,6 +43,7 @@
 		var inputMetric = null;
 		var inputMetrics = null;
 		var metricCallback = null;
+		var nameValidationArray = null;
 		$("#metricName").focus();
 		
 		$("#metric-form").validate({
@@ -55,12 +56,7 @@
 				name: {
 					notInArray : {
 						provider: function(){
-							var array = inputMetrics ? inputMetrics.map(m => m.name) : [];
-							var index = array.indexOf(inputMetric.name);
-							if(index > -1){
-								array.splice(index, 1);	
-							}
-							return array;
+							return nameValidationArray;
 						}
 					}
 				}
@@ -107,6 +103,12 @@
 			metricCallback = callback;
 			toView(metric);
 			bindEventHandlers();
+			
+			nameValidationArray = inputMetrics ? inputMetrics.map(m => m.name) : [];
+			var index = nameValidationArray.indexOf(inputMetric.name);
+			if(index > -1){
+				nameValidationArray.splice(index, 1);	
+			}
 		};
 	})(jQuery);
 </script>
