--- a/parent/device-registry/src/main/resources/public/index.html
+++ b/parent/device-registry/src/main/resources/public/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="libs/jquery-modal/0.9.1/jquery.modal.min.css">
 <link rel="stylesheet" href="libs/jquery-tagsinput/bootstrap-tagsinput.css">
 <link rel="stylesheet" href="libs/datatables.net-bs/css/dataTables.bootstrap.min.css">
+<link rel="stylesheet" href="libs/jquery-toast/jquery.toast.min.css">
 <link rel="stylesheet" href="index.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
@@ -45,6 +46,7 @@
 	<script src="libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
 	<script src="libs/jquery-tagsinput/bootstrap-tagsinput.min.js"></script>
 	<script src="libs/jquery-hashchange/jquery.ba-hashchange.min.js"></script>
+	<script src="libs/jquery-toast/jquery.toast.min.js"></script>
 	
 	<script src="plugins/jquery/jQuery-router.js"></script>
 	<script src="index.js"></script>
