--- a/parent/device-registry/src/main/resources/public/index.html
+++ b/parent/device-registry/src/main/resources/public/index.html
@@ -54,6 +54,7 @@
 	<script src="pages/dashboard/service.js"></script>
 	<script src="pages/templates/service.js"></script>
 	<script src="pages/metrics/service.js"></script>
+	<script src="pages/things/service.js"></script>
 	
 </body>
 
