--- a/parent/device-registry/src/main/resources/public/pages/things/view.html
+++ b/parent/device-registry/src/main/resources/public/pages/things/view.html
@@ -1,3 +1,16 @@
+<style>
+	#alive{
+		float: left;
+		width: 50%;
+		padding-right: 1em;
+	};
+	#biDirectional{
+		float: right;
+		width: 50%;
+		padding-left: 1em;
+	};
+</style>
+
 <div class="modal-content" style="width: 50em; height: 30em;">
 	<div class="modal-header">
 		<h4 class="modal-title">Thing Details</h4>
@@ -19,10 +32,28 @@
 			<div class="tab-pane active" id="thing-details-tab-content" role="tabpanel" aria-labelledby="thing-details-tab">
 				<table style="width:100%">
 					<tr>
-						<td colspan="2">
+						<td width="50%" style="padding: 0 1em 0 0;">
 							<div class="form-group">
 								<label for="thingKey">Key</label> 
 								<input type="text" readonly="readonly" disabled="disabled" data-value="key" class="form-control" id="thingKey">
+							</div>
+						</td>
+						<td width="50%"  style="padding: 0 0 0 1em;">
+							<div class="form-group">
+								<div id="boolVals">
+									<span id="alive">
+										<label>Alive</label>
+										<span style="float:right;">
+											<input type="checkbox" data-value="alive" disabled="disabled" readonly="readonly">
+										</span>
+									</span>
+									<span id="biDirectional">
+										<label>BiDirectional</label>
+										<span style="float:right;">
+											<input type="checkbox" data-value="biDirectional" disabled="disabled" readonly="readonly">
+										</span>
+									</span>
+								</div>
 							</div>
 						</td>
 					</tr>
@@ -32,23 +63,33 @@
 								<label for="thingName">Name</label> 
 								<input type="text" readonly="readonly" disabled="disabled" data-value="name" class="form-control" id="thingName">
 							</div>
-							<div class="form-group">
-								<label for="templateName">Template</label> 
-								<input type="text" readonly="readonly" disabled="disabled" data-value="templateName" class="form-control" id="templateName">
-							</div>
-							<div class="form-group">
-								<label for="thingDescription">Description</label> 
-								<input type="text" readonly="readonly" disabled="disabled" data-value="description" class="form-control" id="thingDescription">
-							</div>
 						</td>
 						<td width="50%"  style="padding: 0 0 0 1em;">
 							<div class="form-group">
 								<label for="tags">Tags</label> 
 								<input type="text" readonly="readonly" disabled="disabled" data-value="tags" class="form-control" id="tags">
 							</div>
+						</td>
+					</tr>
+					<tr>
+						<td width="50%" style="padding: 0 1em 0 0;">
+							<div class="form-group">
+								<label for="templateName">Template</label> 
+								<input type="text" readonly="readonly" disabled="disabled" data-value="templateName" class="form-control" id="templateName">
+							</div>
+						</td>
+						<td width="50%"  style="padding: 0 0 0 1em;" rowspan="2">
 							<div class="form-group">
 								<label for="properties">Properties</label> 
-								<textarea readonly="readonly" disabled="disabled" data-value="properties" data-format="MapFormatter" data-format-target="value" class="form-control" id="properties" rows="4"></textarea>
+								<textarea readonly="readonly" disabled="disabled" data-value="properties" data-format="MapFormatter" data-format-target="value" class="form-control" id="properties" rows="5"></textarea>
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<td width="50%" style="padding: 0 1em 0 0;">
+							<div class="form-group">
+								<label for="thingDescription">Description</label> 
+								<input type="text" readonly="readonly" disabled="disabled" data-value="description" class="form-control" id="thingDescription">
 							</div>
 						</td>
 					</tr>
